# progetto_sciami_ros

./: .gitignore  README.md
saetta_base/: .gitignore  CMakeLists.txt  Saetta.urdf  Saetta_Base_core.cpp  mainpage.dox  manifest.xml
saetta_base/docs/: Perché non utilizzare pthread per il saetta.docx  Saetta_Base_paramsConfig-usage.dox  installazione saetta_base su raspberry.txt
saetta_base/include/: Saetta_Base.h  joystick.h  serverWIFI.h
saetta_base/launch/: 3bots_offline.launch  base_test.launch  cam.launch  saetta_joy.launch  saetta_teleop_key.launch  simple.launch
saetta_base/nbproject/: configurations.xml  project.xml
saetta_base/nbproject/private/: configurations.xml  private.xml
saetta_base/src/: Saetta_Base_core.cpp  base.cpp  joystick.c  mainbase.cpp  saetta_teleop.cpp  serverWIFI.cpp  stupid-stdout-manipulation.cpp  test.cpp
saetta_base/src/Rs232/: rs232.c  rs232.h
saetta_base/src/Saetta_Base/cfg/: Saetta_Base_paramsConfig.py
saetta_base/src/ausiliarie/: .target-makefrag  Makefile  funzioni_ausiliarie.c  funzioni_ausiliarie.h  testa_ausiliarie  testa_ausiliarie.c
saetta_base/src/core/: Makefile  pic2netus.c  pic2netus.h  pic2netus_mau.c  pic2netus_ok.c  pic_rel.h  robot_core.c  robot_core.h  robot_hardware.h
saetta_base/src/netus2pic/: Makefile  a.out  robot_comm.c  robot_comm.h  serial_comm.c  serial_comm.h  test.c
saetta_base/src/sensor/: Makefile  gyro_table.txt  robot_sensors.c  robot_sensors.h  sensor_struct.h
